--- a/RobotRasp.X/nbproject/Makefile-genesis.properties
+++ b/RobotRasp.X/nbproject/Makefile-genesis.properties
@@ -1,8 +1,8 @@
 #
-#Fri Sep 26 12:51:22 CEST 2014
-default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=cb34a79390b81cf1009808342bcc9761
-default.languagetoolchain.dir=/opt/microchip/xc32/v1.33/bin
-com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=ac168ab0a9b512659ad42bb497aabd51
-default.languagetoolchain.version=1.33
-host.platform=linux
+#Thu Oct 09 07:12:20 CEST 2014
+default.com-microchip-mplab-nbide-toolchainXC32-XC32LanguageToolchain.md5=77cd93b862c99a7a2f5063179b33870b
+default.languagetoolchain.dir=/Applications/microchip/xc32/v1.30/bin
+com-microchip-mplab-nbide-embedded-makeproject-MakeProject.md5=359a5f88fb61d826d44692616722ac97
+default.languagetoolchain.version=1.30
+host.platform=mac
 conf.ids=default
